# uv-package-manager-lab

./: .gitignore  LICENSE  README.md  app.py  main.py  popular_packages.txt  popular_requirements.txt  pyproject.toml  requirements.txt  test_example.py
